fix powered with gorgias (still flickering when user post message

--- a/src/stylesheets/footer.less
+++ b/src/stylesheets/footer.less
@@ -1,34 +1,11 @@
 #sk-footer {
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: @footer-height;
 
-    .sk-logo {
-        padding-bottom: 10px;
-        display: flex;
-        justify-content: center;
-
-        a {
-            font-size: 12px;
-            color: #bbb;
-            text-decoration: none;
-        }
-
-        b {
-            font-weight: bold;
-        }
-
-        .sk-image {
-            position: relative;
-            left: 2px;
-            top: 3px;
-            width: 87px;
-            vertical-align: baseline;
-        }
-    }
-
     .input-wrapper {
-        height: @footer-input-height;
+        height: @footer-height;
         position: relative;
         width: 100%;
         bottom: 0;
@@ -42,8 +19,8 @@
         display: flex;
 
         .image-upload {
-            height: @footer-input-height;
-            width: @footer-input-height - 10px;
+            height: @footer-height;
+            width: @footer-height - 10px;
             color: @sk-medium-grey;
             display: inline-block;
             padding: 15px 10px;
@@ -92,7 +69,7 @@
             color: @sk-medium-grey;
             font-weight: 600;
             position: relative;
-            height: @footer-input-height;
+            height: @footer-height;
             line-height: 42px;
             text-decoration: none;
             padding: 0 15px 1px 6px;
