--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -23,8 +23,7 @@
 @header-height: 106px;
 @header-vertical-padding: 0;
 @header-horizontal-padding: 18px;
-@footer-height: 72px;
-@footer-input-height: 46px;
+@footer-height: 46px;
 
 @header-extra-height: (@header-height + 2 * @header-vertical-padding);
 @widget-close-bottom-md: -@widget-height-md + @header-extra-height;
